# simplay

./: .gitmodules  CMakeLists.txt  README.md  animatTest.mov
ctrnn/include/: Ctrnn.hpp  CtrnnNeuron.hpp  Network.hpp  Neuron.hpp  construct.hpp
ctrnn/include/ctrnn/: Network.hpp  Neuron.hpp  construct.hpp
ctrnn/src/: Ctrnn.cpp  CtrnnNeuron.cpp  Network.cpp  Neuron.cpp
graphics/include/: GLAnimat.hpp  GLAxis.hpp  GLCompass.hpp  GLEnvironment.hpp  Graphics.hpp  SetScene.hpp  ThreadRunner.hpp  ThreadedVarIncrementer.hpp  WorldToScreen.hpp
graphics/include/graphics/: Color.hpp  GLAnimat.hpp  GLAxis.hpp  GLButton.hpp  GLCircularDial.hpp  GLCompass.hpp  GLConsole.hpp  GLEnvironment.hpp  GLGUIElement.hpp  GLVerticalSlider.hpp  Graphics.hpp  PauseOverlay.hpp  RetinaScalar.hpp  SetScene.hpp  TextRenderer.hpp  WorldToScreen.hpp
graphics/src/: GLAnimat.cpp  GLButton.cpp  GLCircularDial.cpp  GLVerticalSlider.cpp  Graphics.cpp  RetinaScalar.cpp  TextRenderer.cpp  glut.cpp
main/src/: app.cpp  glut.cpp
model/include/: Animat.hpp  AnimatBlock.hpp  AnimatLayer.hpp  AnimatProperties.hpp
model/include/model/: Animat.hpp  AnimatBlock.hpp  AnimatLayer.hpp  AnimatWorld.hpp  NeuralSubstrate.hpp  SpeciesColour.hpp
model/src/: Animat.cpp  AnimatBlock.cpp  AnimatLayer.cpp  AnimatWorld.cpp  NeuralSubstrate.cpp
neat/include/neat/: Connection.hpp  GlobalInnovationNumber.hpp  MutationParameters.hpp  Network.hpp  Node.hpp  NodeFunction.hpp  NodeType.hpp
neat/src/: Connection.cpp  GlobalInnovationNumber.cpp  Network.cpp  Node.cpp
physics/include/: Matrix.hpp  PhysicsEngine.hpp  PointMass.hpp  Spring.hpp  Vector3.hpp  WaterForceGenerator.hpp
physics/include/physics/: Matrix.hpp  PhysicsEngine.hpp  PointMass.hpp  Spring.hpp  Vector3.hpp
physics/src/: Matrix.cpp  PhysicsEngine.cpp  PointMass.cpp  Spring.cpp  Vector3.cpp  WaterForceGenerator.cpp
simulator/include/: Agent.hpp  AnimatWorld.hpp  CTRNNController.hpp  Controller.hpp  HardcodedCPGController.hpp  RandomOutputController.hpp
simulator/include/simulator/: Agent.hpp  AnimatWorld.hpp  CTRNNController.hpp  Controller.hpp  HardcodedCPGController.hpp  Population.hpp  RandomOutputController.hpp  Simulation.hpp  Simulator.hpp
simulator/src/: Agent.cpp  AnimatWorld.cpp  Population.cpp  Simulation.cpp  Simulator.cpp
